[0.0.7]
- Implemented a undo/redo system for most operations
- Implemented a shortcut system
- The 3D viewport is now a UI widget and scales correctly with the window size

[0.0.6] ~ 07/02/2016
- Updated libGDX to 1.9.2
- Implemented texture splatting for terrain textures
- Implemented terrain painting with up to 5 textures per terrain
- Moved SelectionTool & TranslateTool to the toolbar
- Moved the terrain tools to the component widget in the inspector
- Removed the tools tab in the left sidebar
- Changed input handling for terrain brushes: the mouse has to be moved constantly in order to draw
- Added camera speed control buttons to the status bar
- Added a terrain component widget for the inspector
- Arbitrary images can now internally be used as terrain brushes (like Gimp & Blender do). The r channel determines the strength of the brush.
- Added 4 brushes (circle, smooth circle, star, confetti)
- Implemented height sampling for the flatten mode of the terrain brush

[0.0.5] ~ 26/01/2016
- Implemented a basic component based 3D scene graph
- Changed overall architecture based on the scene graph
- Added scene graph nodes (game objects) to the outline tab as tree structure
- Implemented creation/deletion of game objects
- Added a ModelComponent
- Added a TerrainComponent
- Added a flexible component inspector widget for game objects
- Added some basic component-widgets to the inspector
- Fixed rendering of terrain texture tiles
- Improved UI
- Added import of projects
- Updated LibGDX to 1.9.0
- Updated libGDX backend from lwjgl to lwjgl3
- Changed internal persistence of scenes: every scene has now it's own save file (scenes/scene_name.mundus)

[0.0.4] ~ 10/01/2016
- Added Font Awesome as icon font
- Implemented adding & switching between scenes
- Improved Translate tool
- Added new terrain brush: Flatten
- Added Customizable Fog
- Added a basic skybox (editable, but not savable/exportable)

[0.0.3] ~ 02/01/2016
- Moved Model/asset selection to sidebar